--- a/html-test/edit.html
+++ b/html-test/edit.html
@@ -1,118 +1,232 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>编辑博客</title>
     <style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        .top {
+            background-color: rgb(0, 153, 51);
+            text-align: left;
+        }
+
+        .top .top_con {
+            width: 80%;
+            text-align: left;
+            margin: 0 auto;
+        }
+
+        .top .top_con h1 {
+            font-size: 40px;
+            color: #fff;
+            font-weight: bold;
+            padding: 18px 0;
+            display: inline-block;
+            width: 49%;
+
+        }
+
+        .top .top_con .left {
+            text-align: left;
+        }
+
+        .top .top_con .right {
+            text-align: right;
+        }
+
+        .content {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        .content h2 {
+            font-size: 20px;
+            line-height: 28px;
+            font-weight: 400;
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .content .biaoti {
+            font-size: 16px;
+            line-height: 23px;
+            font-weight: 400;
+            margin-bottom: 15px;
+            margin-top: 25px;
+            color: #333;
+        }
+
+        .content .tishi {
+            font-size: 12px;
+            line-height: 18px;
+            color: #999;
+            text-align: right
+        }
+
+        .content input {
+            display: block;
+            resize: vertical;
+            padding: 5px 15px;
+            line-height: 1.5;
+            box-sizing: border-box;
+            width: 100%;
+            font-size: inherit;
+            color: #606266;
+            background-color: #fff;
+            background-image: none;
+            border: 1px solid #dcdfe6;
+            border-radius: 4px;
+        }
+
+        .content .content-wrapper .text {
+            height: 180px;
+            width: 100%;
+        }
+
+        .content #btn-create {
+            display: inline-block;
+            line-height: 1;
+            white-space: nowrap;
+            cursor: pointer;
+            border: 1px solid #dcdfe6;
+            color: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 12px 20px;
+            font-size: 14px;
+            border-radius: 4px;
+            background-color: rgb(0, 153, 51);
+            margin-top: 51px;
+        }
+
         body {
-            margin: 0 20px;
             line-height: 1;
         }
+
         a {
             text-decoration-line: none;
         }
+
         .title-wrapper {
             margin-bottom: 10px;
         }
-        .title-wrapper input {
-            width: 300px;
-        }
+
+
         .content-wrapper textarea {
             width: 300px;
             height: 150px;
         }
     </style>
 </head>
+
 <body>
-    <h1 style="border-bottom: 1px solid #ccc; padding-bottom: 10px;">编辑博客</h1>
-    <div>
-        <div class="title-wrapper">
-            <input id="text-title">
-        </div>
-        <div class="content-wrapper">
-            <textarea id="text-content"></textarea>
-        </div>
-        <div>
-            <button id="btn-update">保存</button>
+    <div class="top">
+        <div class="top_con">
+            <a href="/index.html">
+                <h1 class="left">LET'S SHARE</h1>
+            </a>
+            <h1 class="right">编辑博文</h1>
         </div>
     </div>
+    <diV class="content">
+        <h2>编辑博文</h2>
+        <div>
+            <div class="title-wrapper">
+                <p class="biaoti">文章标题</p>
+                <input id="text-title">
+                <p class="tishi">限30字</p>
+            </div>
+            <div class="content-wrapper">
+                <p class="biaoti">文章内容</p>
+                <textarea id="text-content" class="text"></textarea>
+                <div>
+                    <button id="btn-create">保存</button>
+                    <p class="tishi">限200字</p>
+                </div>
+            </div>
+        </diV>
 
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script>
-        // 发送 get 请求
-        function get(url) {
-            return $.get(url)
-        }
-
-        // 发送 post 请求
-        function post(url, data = {}) {
-            return $.ajax({
-                type: 'post',
-                url,
-                data: JSON.stringify(data),
-                contentType: "application/json",
-            })
-        }
-
-        // 获取 url 参数
-        function getUrlParams() {
-            let paramStr = location.href.split('?')[1] || ''
-            paramStr = paramStr.split('#')[0]
-            const result = {}
-            paramStr.split('&').forEach(itemStr => {
-                const arr = itemStr.split('=')
-                const key = arr[0]
-                const val = arr[1]
-                result[key] = val
-            })
-            return result
-        }
-
-        // 获取 dom 元素
-        const $textTitle = $('#text-title')
-        const $textContent = $('#text-content')
-        const $btnUpdate = $('#btn-update')
-
-        // 获取博客内容
-        const urlParams = getUrlParams()
-        const url = '/api/blog/detail?id=' + urlParams.id
-        get(url).then(res => {
-            if (res.errno !== 0) {
-                alert('操作错误')
-                return
+        <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+        <script>
+            // 发送 get 请求
+            function get(url) {
+                return $.get(url)
             }
 
-            // 显示数据
-            const data = res.data || {}
-            $textTitle.val(data.title)
-            $textContent.val(data.content)
-            $btnUpdate.attr('data-id', data.id)
-        })
-
-        // 提交修改内容
-        $btnUpdate.click(function () {
-            const $this = $(this)
-            const id = $this.attr('data-id')
-            const title = $textTitle.val()
-            const content = $textContent.val()
-
-            const url = '/api/blog/update?id=' + id
-            const data = {
-                title,
-                content
+            // 发送 post 请求
+            function post(url, data = {}) {
+                return $.ajax({
+                    type: 'post',
+                    url,
+                    data: JSON.stringify(data),
+                    contentType: "application/json",
+                })
             }
-            post(url, data).then(res => {
+
+            // 获取 url 参数
+            function getUrlParams() {
+                let paramStr = location.href.split('?')[1] || ''
+                paramStr = paramStr.split('#')[0]
+                const result = {}
+                paramStr.split('&').forEach(itemStr => {
+                    const arr = itemStr.split('=')
+                    const key = arr[0]
+                    const val = arr[1]
+                    result[key] = val
+                })
+                return result
+            }
+
+            // 获取 dom 元素
+            const $textTitle = $('#text-title')
+            const $textContent = $('#text-content')
+            const $btnUpdate = $('#btn-update')
+
+            // 获取博客内容
+            const urlParams = getUrlParams()
+            const url = '/api/blog/detail?id=' + urlParams.id
+            get(url).then(res => {
                 if (res.errno !== 0) {
                     alert('操作错误')
                     return
                 }
-                alert('更新成功')
-                location.href = '/admin.html'
-            })
-        })
 
-    </script>
+                // 显示数据
+                const data = res.data || {}
+                $textTitle.val(data.title)
+                $textContent.val(data.content)
+                $btnUpdate.attr('data-id', data.id)
+            })
+
+            // 提交修改内容
+            $btnUpdate.click(function () {
+                const $this = $(this)
+                const id = $this.attr('data-id')
+                const title = $textTitle.val()
+                const content = $textContent.val()
+
+                const url = '/api/blog/update?id=' + id
+                const data = {
+                    title,
+                    content
+                }
+                post(url, data).then(res => {
+                    if (res.errno !== 0) {
+                        alert('操作错误')
+                        return
+                    }
+                    alert('更新成功')
+                    location.href = '/admin.html'
+                })
+            })
+        </script>
 </body>
+
 </html>
