--- a/html-test/index.html
+++ b/html-test/index.html
@@ -1,37 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
     <style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        a{
+            color: #fff;
+        }
+
+        .top {
+            background-color: rgb(0, 153, 51);
+            color: #fff;
+        }
+
+        .top h1 {
+            font-size: 40px;
+            font-weight: bold;
+        }
+
+        .top h1,
+        p {
+            text-align: center
+        }
+
+        .top h1 {
+            padding: 79px 0 34px 0;
+        }
+
+        .top .bt {
+            text-align: center;
+            padding: 45px 0 30px 0;
+        }
+
+        .top .bt button {
+            font-size: 13px;
+            color: #060;
+            padding: 0 8px;
+            height: 28px;
+            line-height: 28px;
+            border-radius: 4px;
+            font-weight: 400;
+            border: none;
+            cursor: pointer;
+        }
+
         body {
-            margin: 0 20px;
             line-height: 1;
         }
+
         a {
             text-decoration-line: none;
         }
 
         .title-wrapper {
-            padding: 15px 0;
+            padding: 15px 10px;
             border-top: 1px solid #ccc;
         }
+
         .title-wrapper .title {
             font-size: 20px;
             font-weight: bold;
         }
-        .title-wrapper .info-wrapper span,
-        .title-wrapper .info-wrapper a {
-            font-size: 14px;
-            color: #999;
+
+        .title-wrapper .title a {
+            color: #666666;
         }
 
+        .title-wrapper .info-wrapper span,
+        .title-wrapper .info-wrapper a {
+            font-size: 12px;
+            line-height: 18px;
+            color: #999;
+        }
     </style>
 </head>
+
 <body>
-    <h1>博客首页</h1>
+    <div class="top">
+        <a href="/index.html">
+            <h1>LET'S SHARE</h1>
+        </a>
+        <p>精品博客汇聚</p>
+        <div class="bt">
+            <a href="/login.html">
+                <button>立即登录</button>
+            </a>
+            <a href="/register.html">
+                <button>立即注册</button>
+            </a>
+        </div>
+    </div>
     <div id="blog-container"></div>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
@@ -91,7 +157,7 @@
                             <span>
                                 <a href="/index.html?author=${item.author}">${item.author}</a>
                             </span>
-                            <span>${getFormatDate(item.createtime)}</span>
+                            <span>${getFormatDate(item.createtime)}发布</span>
                         </div>
                     </div>
                 `))
@@ -99,4 +165,5 @@
         })
     </script>
 </body>
+
 </html>
