--- a/html-test/detail.html
+++ b/html-test/detail.html
@@ -49,6 +49,7 @@
         .content {
             width: 80%;
             margin: 0 auto;
+            padding-top: 40px;
         }
 
         body {
@@ -62,6 +63,7 @@
         .title {
             font-size: 20px;
             font-weight: bold;
+            padding-bottom: 30px;
         }
 
         .info-container span,
@@ -73,6 +75,9 @@
         .content-wrapper {
             margin-top: 20px;
             border-top: 1px solid #ccc;
+        }
+        #content{
+            padding-top: 20px;
         }
     </style>
 </head>
