--- a/html-test/index.html
+++ b/html-test/index.html
@@ -68,6 +68,7 @@
         .title-wrapper .title {
             font-size: 20px;
             font-weight: bold;
+            color: #000;
         }
 
         .title-wrapper .title a {
@@ -79,6 +80,14 @@
             font-size: 12px;
             line-height: 18px;
             color: #999;
+        }
+        .title-wrapper .info-wrapper a{
+            color: #666;
+            font-size: 16px;
+
+        }
+        #blog-container{
+            margin: 0 90px;
         }
     </style>
 </head>
